added crud to training
